arreglando faq desktop

--- a/faq.html
+++ b/faq.html
@@ -22,7 +22,7 @@
               </a>
             </li>
             <li>
-            <a href="/como-funciona.html">
+            <a href="/how-work.html">
               Como funciona
             </a> 
             </li>
@@ -35,6 +35,125 @@
       </div>
     </div>
   </header>
+  <main>
+    <div class="faq__container">
+      <div class="faq__navbar">
+            <label for="faq_1"><span>1.</span> ¿POR QUÉ DEBERÍA CONFIAR EN TI?</label>
+            <label for="faq_2"><span>2.</span> ¿POR QUÉ ALGUNAS SKINS NO APARECE EN MI INVENTARIO DE SKINS.CASH?</label>
+            <label for="faq_3"><span>3.</span> ¿Cómo completo la transacción?</label>
+            <label for="faq_4"><span>4.</span> He encontrado un error!</label>
+            <label for="faq_5"><span>5.</span> Cómo confirmar la oferta de canje de Skins.Cash en Steam?</label>
+            <label for="faq_6"><span>6.</span> ¿Cuál es el precio del servicio para la skins formación?</label>
+            <label for="faq_7"><span>7.</span> No he recibido el dinero en mi cuenta</label>
+            <label for="faq_8"><span>8.</span> ¿Cuánto costará mi skin en su sitio web?</label>
+            <label for="faq_9"><span>9.</span> Hice todo correctamente, pero no he recibido la confirmación de la transacción de Steam</label>
+            <label for="faq_10"><span>10.</span> requisitos de la cuenta</label>
+            <label for="faq_11"><span>11.</span> Cómo configurar y usar Steam Mobile Application?</label>
+            <label for="faq_12"><span>12.</span> Venta al por mayor</label>
+
+      </div>
+      <div class="faq__description">
+        <input type="radio" name="raq" id="faq_1" checked>
+          <article class="faq__description__1 article">
+            <h2>¿POR QUÉ DEBERÍA CONFIAR EN TI?</h2>
+            <h3>Pago instantáneo! 100% seguro!</h3>
+            <p><span>1.</span> En el momento tenemos miles de retroalimentación positiva en todas las redes sociales (Facebook, Twitter, Steam, Instagram). Visita nuestras páginas!</p>
+            <p><span>2.</span> Más de un centenar de vídeos. Casi la totalidad de los más populares de Youtube video-bloggers han hecho sus comentarios acerca de nuestro servicio.</p>
+            <p><span>3.</span> Trustpilot - una de las mayores comunidades de revisión en línea del mundo nos apoya! https://www.trustpilot.com/review/skins.cash</p>
+            <p><span>4.</span> Todas nuestras operaciones son transparentes. Se puede ver la alimentación en nuestra página web.</p>
+            <p><span>5.</span> Nuestro apoyo está disponible 24/7. Estaremos encantados de responder a cualquiera de sus preguntas.</p>
+          </article>
+          <input type="radio" name="raq" id="faq_2">
+          <article class="faq__description__2 article">
+            <h2>¿POR QUÉ ALGUNAS SKINS NO APARECE EN MI INVENTARIO DE SKINS.CASH?</h2>
+            <p>El filtro no muestra skins que nuestro servicio no va a comprar. Se hace específicamente para su conveniencia.</p>
+            <p>Nuestro filtro de funcionamiento es muy simple: nuestro servicio no compra CS:GO artículos que no son populares entre los CS:GO comunidad o los que tienen la política de precios inestables (por ejemplo, si el rpice se reduce constantemente recientemente).</p>
+            <p>Pero no se preocupe si nuestro filtro no muestra nada hoy. Volver de vez en cuando para ver si la configuración del filtro se cambió. Quizás algunos de los artículos estarán disponibles para la venta.</p>
+          </article>
+          <input type="radio" name="raq" id="faq_3">
+          <article class="faq__description__3 article">
+            <h2>¿Cómo completo la transacción?</h2>
+            <p>Hay algunas restricciones muy importantes de Steam y Valve, lo que tiene que leer y seguir cuidadosamente para garantizar su seguridad y la seguridad de su dinero.</p>
+            <p>El usuario está obligado a cumplir con las siguientes reglas para una transacción exitosa:</p>
+            <p><span>-</span> Debe tener la aplicación móvil de Steam para confirmar la transferencia de contenido de juegos por el sistema de protección Steam, instalado no menos de 7 días antes de realizar la transacción;</p>
+            <p><span>-</span> Debe tener sistema de protección Steam Guard activado no menos de 15 días antes de realizar la transacción con la Compañía en el mismo dispositivo que la transacción se realizará a partir;</p>
+            <p><span>-</span> No se debe cambiar la contraseña en el sistema de Steam dentro de al menos 5 días antes de realizar la transacción. Si su cuenta de Steam ha estado inactivo durante los 2 últimos meses, la condición necesaria es que no se debe cambiar la contraseña del sistema de Steam dentro de los 30 días antes de realizar la transacción;</p>
+            <p><span>-</span> No se debe cambiar la dirección de correo electrónico de contacto en el sistema de Steam de agua durante al menos 5 días antes de la operación;</p>
+            <p><span>-</span> Por lo menos 7 días antes de la operación, no se debe cambiar el dispositivo con la aplicación de Steam, que será utilizado para confirmar la transferencia de contenido del juego;</p>
+            <p><span>-</span> La edad del usuario debe tener al menos 18 años.</p>
+            <p>En caso de incumplimiento de cualquiera de los requisitos del usuario anterior, Skins.Cash se reserva el derecho de cancelar la transacción.</p>
+          </article>
+          <input type="radio" name="raq" id="faq_4">
+          <article class="faq__description__4 article">
+            <h2>HE ENCONTRADO UN ERROR!</h2>
+            <p>Usted ha encontrado un fallo o error en Skins.Cash? Un error o una errata en el texto? Entonces inmediatamente en contacto con nuestro equipo de soporte y informarnos.Estaremos muy agradecidos por su ayuda!</p>
+            <p>Contacts: info@skins.cash or Facebook</p>
+          </article>
+          <input type="radio" name="raq" id="faq_5">
+          <article class="faq__description__5 article">
+            <h2>Cómo confirmar la oferta de canje de Skins.Cash en Steam?</h2>
+            <p><span>1.</span> Una vez que confirme el cambio y selecciona el sistema de pago en nuestro sitio web, usted recibirá una oferta de canje de nuestro robot dentro de unos pocos segundos. La oferta también contendrá un código de seguridad.</p>
+            <p><span>2.</span> En la nueva ventana que se abre, espere hasta que todos los artículos se cargan y haga clic en el 'Listo para el comercio' opción, después, usted puede golpear el botón 'Aceptr Comercio' button.</p>
+            <p><span>3.</span> Recibirá el siguiente mensaje.</p>
+            <p><span>4.</span>Ahora se necesitan para confirmar el comercio de Steam Aplicación Móvil.</p>
+          </article>
+          <input type="radio" name="raq" id="faq_6">
+          <article class="faq__description__6 article">
+            <h2>¿CUÁL ES EL PRECIO DEL SERVICIO PARA LA SKINS FORMACIÓN?</h2>
+            <p>Nuestro servicio no tiene cuotas o cargos por las ofertas. Usted consigue la cantidad que se muestra antes de vender skins.</p>
+            <p>Todas las transacciones son 100% seguras y están bajo una supervisión constante de nuestros servicios de seguridad.</p>
+            <p>Nuestro apoyo está listo para responder todas sus preguntas. Trabajamos 24 horas al día, 7 días a la semana.</p>
+            <p>La formación de los precios del servicio para las pieles se genera de forma automática. El cálculo de los datos se toman de otras plataformas similares, incluyendo vapor. Usted recibirá dinero real en 15 minutos. Trabajamos con los sistemas de pago más populares: PayPal, Pay.Skins.Cash, WebMoney, VISA, Master Card, e incluso Bitcoin.</p>
+            <p>Todas las transacciones son 100% seguras y están bajo la supervisión constante de nuestros servicios de seguridad.Nuestro apoyo está listo para responder a sus preguntas. Se trabaja las 24 horas del día, 7 días a la semana.</p>
+          </article>
+          <input type="radio" name="raq" id="faq_7">
+          <article class="faq__description__7 article">
+            <h2>HE ENCONTRADO UN ERROR!</h2>
+            <p>No se preocupe. Garantizamos pago de 100%!¿Qué debe hacer si no puede ver los fondos en su cuenta?</p>
+            <p>Si elige WebMoney Intente actualizar la información de su cuenta (presione F5) o cerrar la sesión y en su cuenta WebMoney nuevo.</p>
+            <p>Si elige Payoneer o PayPal. A veces, debido a los problemas de los sistemas de pago, los fondos puede viene con un retraso. A veces Payoneer y PayPal simplemente no aceptan nuestro pago. Debe comunicarse inmediatamente con nuestro operador de chat en línea 24/7 en Skins.Cash y hacernos saber su número de transacción (consultar su correo electrónico) y explicar la situación. Vamos a actualizar el pago y usted recibirá su dinero.</p>
+            <p>Si selecciona Master Card. Puede haber retrasos ocasionales en la transferencia de dinero de hasta 5 días debido a los procesos internos de la entidad emisora ​​de la tarjeta de crédito. Si usted no ha recibido el pago dentro de una hora después de que se cierre el acuerdo, por favor, póngase en contacto con su tarjeta de crédito emisor servicio de soporte para una posible explanations.Sorry, pero no podemos acelerar las transferencias bancarias de la UPU.</p>
+          </article>
+          <input type="radio" name="raq" id="faq_8">
+          <article class="faq__description__8 article">
+            <h2>¿CUÁNTO COSTARÁ MI SKIN EN SU SITIO WEB?</h2>
+            <p>Un valor trato o el precio de un particular skin se pueden ver directamente en el sitio sin hacer obligatorio de un acuerdo en sí.</p>
+            <p>Nuestro servicio fija los precios para las pieles de forma automática. También tenemos en cuenta los datos de las otras plataformas similares, incluyendo Steam. Usted recibirá dinero real en 15 minutos. Trabajamos con los sistemas de pago más populares: PayPal, WebMoney, VISA, Master Card, e incluso Bitcoin.</p>
+          </article>
+          <input type="radio" name="raq" id="faq_9">
+          <article class="faq__description__9 article">
+            <h2>HICE TODO CORRECTAMENTE, PERO NO HE RECIBIDO LA CONFIRMACIÓN DE LA TRANSACCIÓN DE STEAM</h2>
+            <p>Esto puede suceder debido a las siguientes razones:</p>
+            <p><span>1.</span> Steam está experimentando algunos problemas técnicos, por lo tanto, los intercambios en el sistema pueden estar temporalmente no disponible.</p>
+            <p><span>2.</span> Puede haber problemas temporales con nuestra bot.</p>
+            <p>Si está seguro del sistema de Steam funciona correctamente, por favor, póngase en contacto con nuestro soporte en línea, van a responder con prontitud y ayudar a resolver su problema cuanto antes.</p>
+          </article>
+          <input type="radio" name="raq" id="faq_10">
+          <article class="faq__description__10 article">
+            <h2>REQUISITOS DE LA CUENTA</h2>
+            <p>La cuenta no tiene que tener una suspensión de por vida con el comercio o las restricciones temporales de cambio (7 días de restricción del comercio, bloqueo VAC, cambio de contraseña, etc.) Una lista detallada oficial está disponible en el sitio web Steam aquí.</p>
+            <p>La cuenta debe estar vinculado a su teléfono a través de Steam Aplicación móvil con Mobile Authenticator activa. Clic aqui saber más acerca de Steam Mobile.</p>
+            <p>Su cuenta en el sitio web Steam debe tener una correcta trade URL añadido y guardado</p>
+            <p>El inventario y el perfil la configuración de privacidad se deben establecer en "Público"</p>
+          </article>
+          <input type="radio" name="raq" id="faq_11">
+          <article class="faq__description__11 article">
+            <h2>CÓMO CONFIGURAR Y USAR STEAM MOBILE APPLICATION?</h2>
+            <p>Como sabemos la cuenta debe estar vinculado a su teléfono a través Steam Mobile Application con activo Mobile Authenticator. Asegúrese de haber instalado el autenticador de Steam Mobile al menos hace 7 días.</p>
+            <p>Al principio usted debe instalar la aplicación. Depende de su sistema operativo móvil, lo puede conseguir mediante los siguientes enlaces:</p>
+            <p>Luego hay que firmar y confirmar el dispositivo.</p>
+            <p>Después de que usted necesita para activar Steam Authenticator en el menu de Steam Guard.</p>
+            <p>A continuación, la activación comlete Authenticator por SMS de verificación.</p>
+            <p>Enhorabuena! Usted tiene 7 días para recoger las skins. Por último, se puede vender a todos en Skins.Cash:)</p>
+          </article>
+          <input type="radio" name="raq" id="faq_12">
+          <article class="faq__description__12 article">
+            <h2>VENTA AL POR MAYOR</h2>
+            <p>Usted puede vender grandes cantidades de skins? Le podemos ofrecer excelentes condiciones y bonificaciones. Por favor, póngase en contacto con nosotros para discutir las condiciones para ventas al por mayor.</p>
+          </article>
+       </div>
+    </div>
+  </main>
   <footer class="footer">
     <div class="footer__container">   
       </div>
